challenge_1/3-tier-environment/vpc_config/igw_config.tf
resource "aws_internet_gateway" "gw" {
        vpc_id = aws_vpc.vpc_kgs.id

        tags   = {
        Name   = "Internet Gateway KGS"
        }
  
}
