challenge_1/3-tier-environment/vpc_config/nat_gtw_config.tf
resource "aws_eip" "natgweip" {

    vpc = true
  
}


resource "aws_nat_gateway" "natgw" {

    subnet_id     = aws_subnet.publicsubnet2.id
    depends_on    = [aws_internet_gateway.gw]
    allocation_id = aws_eip.natgweip.id


    tags          = {
    Name          = "NAT Gateway KGS"
    }

  
}

output "output_igw" {
  value          = aws_internet_gateway.gw.id
}
